[package]
name = "rgbdns"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
description = "A safe, faithful Rust reimplementation of the djbdns suite"

[dependencies]
cdb = "0.6"
getrandom = "0.3"
hickory-server = { version = "0.26.1", default-features = false, features = ["dnssec-ring", "recursor"] }
ipnet = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[[bin]]
name = "tinydns"
path = "src/bin/tinydns.rs"

[[bin]]
name = "tinydns-data"
path = "src/bin/tinydns-data.rs"

[[bin]]
name = "tinydns-get"
path = "src/bin/tinydns-get.rs"

[[bin]]
name = "dnsq"
path = "src/bin/dnsq.rs"

[[bin]]
name = "dnscache"
path = "src/bin/dnscache.rs"
test = false

[[bin]]
name = "axfrdns"
path = "src/bin/axfrdns.rs"

[[bin]]
name = "axfr-get"
path = "src/bin/axfr-get.rs"

[[bin]]
name = "rbldns"
path = "src/bin/rbldns.rs"

[[bin]]
name = "rbldns-data"
path = "src/bin/rbldns-data.rs"

[[bin]]
name = "walldns"
path = "src/bin/walldns.rs"

[[bin]]
name = "dnsip"
path = "src/bin/dnsip.rs"

[[bin]]
name = "dnsipq"
path = "src/bin/dnsipq.rs"

[[bin]]
name = "dnsname"
path = "src/bin/dnsname.rs"

[[bin]]
name = "dnsmx"
path = "src/bin/dnsmx.rs"

[[bin]]
name = "dnstxt"
path = "src/bin/dnstxt.rs"

[[bin]]
name = "dnsqr"
path = "src/bin/dnsqr.rs"
