[package]
name = "rgbdns"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
description = "A safe, faithful Rust reimplementation of the djbdns suite"

[dependencies]
cdb = "0.6"
getrandom = "0.3"
hickory-server = { version = "0.26.1", default-features = false, features = ["dnssec-ring", "recursor"] }
ipnet = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[[bin]]
name = "tinydns"
path = "src/bin/tinydns.rs"

[[bin]]
name = "tinydns-data"
path = "src/bin/tinydns-data.rs"

[[bin]]
name = "tinydns-get"
path = "src/bin/tinydns-get.rs"

[[bin]]
name = "dnsq"
path = "src/bin/dnsq.rs"

[[bin]]
name = "dnscache"
path = "src/bin/dnscache.rs"
test = false

[[bin]]
name = "axfrdns"
path = "src/bin/axfrdns.rs"

[[bin]]
name = "axfr-get"
path = "src/bin/axfr-get.rs"

[[bin]]
name = "rbldns"
path = "src/bin/rbldns.rs"

[[bin]]
name = "rbldns-data"
path = "src/bin/rbldns-data.rs"

[[bin]]
name = "walldns"
path = "src/bin/walldns.rs"

[[bin]]
name = "dnsip"
path = "src/bin/dnsip.rs"

[[bin]]
name = "dnsipq"
path = "src/bin/dnsipq.rs"

[[bin]]
name = "dnsname"
path = "src/bin/dnsname.rs"

[[bin]]
name = "dnsmx"
path = "src/bin/dnsmx.rs"

[[bin]]
name = "dnstxt"
path = "src/bin/dnstxt.rs"

[[bin]]
name = "dnsqr"
path = "src/bin/dnsqr.rs"

[[bin]]
name = "dnsfilter"
path = "src/bin/dnsfilter.rs"

[[bin]]
name = "dnstrace"
path = "src/bin/dnstrace.rs"

[[bin]]
name = "tinydns-edit"
path = "src/bin/tinydns-edit.rs"

[[bin]]
name = "random-ip"
path = "src/bin/random-ip.rs"

[[bin]]
name = "tinydns-conf"
path = "src/bin/tinydns-conf.rs"

[[bin]]
name = "dnscache-conf"
path = "src/bin/dnscache-conf.rs"

[[bin]]
name = "rbldns-conf"
path = "src/bin/rbldns-conf.rs"

[[bin]]
name = "walldns-conf"
path = "src/bin/walldns-conf.rs"

[[bin]]
name = "axfrdns-conf"
path = "src/bin/axfrdns-conf.rs"
